Added error detection messages

--- a/Revised JB version/src/config/lang/lang.properties
+++ b/Revised JB version/src/config/lang/lang.properties
@@ -136,6 +136,10 @@ table.name=Name
 table.value=Value
 console.containsError=[ERROR] Flowchart contains error!\n
 console.end===END==\n
+console.inconnections = [ERROR] Some flowchart components are missing in connections! \n
+console.outconnections = [ERROR] Some flowchart components are missing out connections! \n
+console.endcomponent =  [ERROR] Flowchart is missing an END/RETURN component! \n
+
 popup.error=Error
 popup.inputArgument=Enter a value for argument: 
 popup.inputNumber.error=The value you entered is not a number.\nEnter the correct one number.
