--- a/Revised JB version/src/config/lang/descriptions.properties
+++ b/Revised JB version/src/config/lang/descriptions.properties
@@ -26,6 +26,7 @@ MODULE.help=<html>Module block<hr/>
 FORLOOP.help=<html>For Loop<hr/>
 WHILELOOP.help=<html>While Loop<hr/>
 DOWHILELOOP.help=<html>Do While Loop<hr/>
+DECLARATION.help=<html>Declaration block<hr/>
 LOGO.help=<html>logo<hr/>
 CANVAS2D.help=<html>canvas2d<hr/>
 canvas2d=Canvas 2d
