--- a/Revised JB version/src/config/lang/lang.properties
+++ b/Revised JB version/src/config/lang/lang.properties
@@ -135,7 +135,7 @@ popup.notFound=not found
 table.name=Name
 table.value=Value
 console.containsError=[ERROR] Flowchart contains error!\n
-console.end===END==\n
+console.end= FLOWCHART EXECUTION SUCCESSFUL\n
 console.inconnections = [ERROR] Some flowchart components are missing in connections! \n
 console.outconnections = [ERROR] Some flowchart components are missing out connections! \n
 console.endcomponent =  [ERROR] Flowchart is missing an END/RETURN component! \n
