--- a/Documentation/User Manual/coverpage.tex
+++ b/Documentation/User Manual/coverpage.tex
@@ -3,13 +3,12 @@
 		
 		\begin{figure}[t]
 			\centering
-			%\includegraphics[width=350px]{UP_Logo.png}
-		\end{figure}		
-	
+			\includegraphics[width=350px]{UP_Logo.png}
+		\end{figure}	
 	
 	\begin{flushright} 
 		
-		\textbf{\LARGE COS 301 Main Project}
+		\textbf{\LARGE COS301 Main Project}
 		\newline \newline \newline
 		\textbf{\LARGE Flowchart Simulation Tool User Manual}
 		\newline \newline \newline
@@ -18,12 +17,23 @@
 	\end{flushright}
 	
 	\begin{flushright} \large
+			
 			\textbf{\LARGE Stakeholders}\newline 
 			Lelethu Zazaza 13028023\newline
 			Goodness Adegbenro 13046412\newline
 			Hlavutelo Maluleke 12318109\newline
 			Tshepiso Magagula 12274195\newline
 			Xoliswa Ntshingila 13410378\newline
+			
+			
+	\end{flushright}
+	
+	\begin{flushright} \large
+	
+			\textbf{\LARGE Client}\newline 
+			Mr Willem S. van Heerden \newline
+			University of Pretoria (Junior Lecturer)\newline
+			
 	\end{flushright}
 		
 		\vspace{1 cm}
