Description of return block

--- a/Revised JB version/src/config/lang/descriptions.properties
+++ b/Revised JB version/src/config/lang/descriptions.properties
@@ -14,7 +14,7 @@ CPU.help=<html>Processing block<hr/>\nPerformed in the calculation, produces fea
 IO.help=<html>Input/Output block (code)<hr/>\nUsed to read and write data
 IOin.help=<html>Input block<hr/>\nServes only to collect data from user
 DECISION.help=<html>Decision block<hr/>
-RETURN.help=<html>Return block<hr/>
+RETURN.help=<html>End/Return block<hr/>
 COMMENT.help=<html>Comment<hr/>
 IOout.help=<html>Output block<hr/>
 LINK.help=<html>Link<hr/>
