Input and Output blocks added.

--- a/Revised JB version/src/config/lang/descriptions.properties
+++ b/Revised JB version/src/config/lang/descriptions.properties
@@ -17,6 +17,8 @@ DECISION.help=<html>Decision block<hr/>
 RETURN.help=<html>End/Return block<hr/>
 COMMENT.help=<html>Comment<hr/>
 IOout.help=<html>Output block<hr/>
+INPUT.help=<html>Input block<hr/>
+OUTPUT.help=<html>Output block<hr/>
 LINK.help=<html>Link<hr/>
 JUMP.help=<html>Jump block<hr/>
 STRUCT.help=<html>Structure<hr/>
