--- a/Revised JB version/src/config/lang/lang.properties
+++ b/Revised JB version/src/config/lang/lang.properties
@@ -35,7 +35,7 @@ main.paste=Paste
 main.settings=Settings
 main.draw=Drawing
 main.pascalMode=Pascal Mode
-main.drawGrid=Draw Grid
+main.drawGrid=Show/Hide Grid
 main.antiAliasing=Anti Aliasing
 main.drawFullConnectorsValue=Draw full connectors values
 block.IO=I/O block
@@ -51,7 +51,7 @@ scriptPanel.values=Values
 block.LINK=Double link
 block.BRACE=Braces
 block.JUMP=Jump
-main.flowcharts=Flowcharts
+main.flowcharts=Modules
 main.flowcharts.add=Add
 main.flowcharts.remove=Remove
 main.flowcharts.rename=Rename
