[Declaration Editor]: Change Logic to Boolean

--- a/Revised JB version/src/config/lang/lang.properties
+++ b/Revised JB version/src/config/lang/lang.properties
@@ -90,7 +90,7 @@ ioEditor.typeNumber=Number
 ioEditor.typeString=String
 ioEditor.typeCharArray=Char array
 ioEditor.typeInteger=Integer
-ioEditor.typeLogic=Logic
+ioEditor.typeBoolean=Boolean
 ioEditor.typeAny=Any
 ioEditor.elements=elements
 ioEditor.array=Array:
