Updating user manual

--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -25,7 +25,11 @@
 		
 \section{System Installation}
 		
-		This system is a "plug-and-play" type of application, for which the executable file can be found from the University of Pretoria (Computer Science) website (http://www.cs.up.ac.za/courses/COS151). \newline
+		This system requires the a complete installation
+		
+		% to update		
+		
+		, for which the executable file can be found from the University of Pretoria (Computer Science) website (http://www.cs.up.ac.za/courses/COS151). \newline
 		
 		Since this system is provided by the department, it must be pre-installed in the machines that are in the Infomatorium. So not much installation from students perspective. Nonetheless, for external use the installation procedures will be uploaded into the aforesaid URL and also updated here when finalised. 
 		
