--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -25,7 +25,11 @@
 		
 \section{System Installation}
 		
-		This system requires the a complete installation
+		This system requires a complete installation in order to fully operate it. For different platforms, various installation files are required. \newline
+		
+		\begin{center}
+		Windows
+		\end{center}
 		
 		% to update		
 		
