Flow installation, even uploaded the installation file

--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -31,12 +31,19 @@
 		Windows
 		\end{center}
 		
-		% to update		
+		The image below shows the file that one requires for a complete successful installation of the program. Double-click the file to begin the installation process. \newline \newline
+		\includegraphics[width=13cm, height=2cm]{Install1.jpg}		
+		\begin{center}
+		Figure: The file used to install 'Flow'
+		\end{center}
 		
-		, for which the executable file can be found from the University of Pretoria (Computer Science) website (http://www.cs.up.ac.za/courses/COS151). \newline
+			
+		Next, follow the installation prompts and complete the installation. \newline
 		
-		Since this system is provided by the department, it must be pre-installed in the machines that are in the Infomatorium. So not much installation from students perspective. Nonetheless, for external use the installation procedures will be uploaded into the aforesaid URL and also updated here when finalised. 
-		
+		\includegraphics[width=13cm]{Install2.jpg}		
+		\begin{center}
+		Figure: Complete installation
+		\end{center}
 
 \section{Getting Started}
 	
