Configuration on windows

--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -23,6 +23,8 @@
 		
 		It is so far recommended that the computer in which the system will be executed have Java 7 and above installed to allow the successful execution of the program. Other versions might make the system have unseen bugs.
 		
+		Also, on Windows...
+		
 \section{System Installation}
 		
 		This system requires a complete installation in order to fully operate it. For different platforms, various installation files are required. \newline
