Check for empty module name

--- a/Revised JB version/src/config/lang/lang.properties
+++ b/Revised JB version/src/config/lang/lang.properties
@@ -123,6 +123,7 @@ ioEditor.drawMessage=Draw message
 popup.newVersion=New version of JavaBlock is available\nDo you want to visit http://javablock.sf.net/ ?
 popup.flowchartNewer=Document which you like to open is created in newer version of JavaBlock
 popup.flowMustBeUnique=Flowchart name must be unique and contains no special chars nor whitespaces
+popup.flowMustNotBeEmpty=Flowchart must have a name i.e It cant be blank.
 popup.flowMustBeUnique.head=Wrong name
 popup.loadLastError=Unable to load last flowchart
 popup.loadError.head=Error loading
