--- a/Revised JB version/src/config/lang/lang.properties
+++ b/Revised JB version/src/config/lang/lang.properties
@@ -84,7 +84,7 @@ ioEditor.input=Read
 ioEditor.output=Write
 ioEditor.header=Input/Output block editor
 ioEditor.variable=Variable:
-ioEditor.mesasge=Message:
+ioEditor.mesasge=Prefix:
 ioEditor.type=Type:
 ioEditor.typeNumber=Number
 ioEditor.typeString=String
@@ -94,7 +94,7 @@ ioEditor.typeBoolean=Boolean
 ioEditor.typeAny=Any
 ioEditor.elements=elements
 ioEditor.array=Array:
-ioEditor.messageSufix=message sufix:
+ioEditor.messageSufix=message suffix:
 ioEditor.newLine=Insert new line
 interpreter.defaultArguments=Default arguments:
 interpreter.predefiniedInput=Predefinied input:
