Attempting To Change var to : num string, boolean

--- a/Revised JB version/src/config/lang/lang.properties
+++ b/Revised JB version/src/config/lang/lang.properties
@@ -86,12 +86,12 @@ ioEditor.header=Input/Output block editor
 ioEditor.variable=Variable:
 ioEditor.mesasge=Message:
 ioEditor.type=Type:
-ioEditor.typeNumber=Number
-ioEditor.typeString=String
+ioEditor.typeNumber=num
+ioEditor.typeString=string
 ioEditor.typeCharArray=Char array
 ioEditor.typeInteger=Integer
-ioEditor.typeBoolean=Boolean
-ioEditor.typeAny=Any
+ioEditor.typeBoolean=boolean
+ioEditor.typeAny=any
 ioEditor.elements=elements
 ioEditor.array=Array:
 ioEditor.messageSufix=message sufix:
