--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -29,9 +29,8 @@
 		
 		This system requires a complete installation in order to fully operate it. For different platforms, various installation files are required. \newline
 		
-		\begin{center}
-		Windows
-		\end{center}
+
+		\subsection{Windows}
 		
 		The image below shows the file that one requires for a complete successful installation of the program. Double-click the file to begin the installation process. \newline \newline
 		\includegraphics[width=13cm, height=2cm]{Install1.jpg}		
