Updating user manual

--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt,a4paper,titlepage]{article}
 \usepackage{graphicx}
+\usepackage[a4paper, total={6in,8in}]{geometry}
 \DeclareGraphicsExtensions{.png}
 \DeclareGraphicsExtensions{.jpg}
 
@@ -12,25 +13,26 @@
 \pagenumbering{arabic}
 \section{System Overview}
 	
-		Flowchart Simulation Tool is an application which allows for designing and executing flowchart diagrams. This application is intended for academic purposes for students with basic knowledge of programming design and implementation. This is a platform where the students can construct their own flowcharts, test and use them as they would like. \newline
+		Flowchart Simulation Tool is an application which allows for designing and executing flowchart diagrams. A flowchart is a type of diagram that represents an algorithm, workflow or process, showing the steps as boxes of various kinds, and their order by connecting them with arrows (https://en.wikipedia.org/wiki/Flowchart). This diagrammatic representation illustrates a solution model to a given problem. Flowcharts are used in analysing, designing, documenting or managing a process or program in various fields. \newline
 		
-		Furthermore, this system is highly related to the already existing edition of JavaBlock. The idea behind this system and that of JavaBlock is the same, they both pursue the same purpose. However, they are different when it comes to the usability of the system. With Flow (this system) focusing more on the interaction the user has on the system. For example, with JavaBlock to place a block onto the canvas one requires a couple of operations but with Flow, drag-and-drop operation is used. 
+		This application is intended for academic purposes for first students with basic knowledge of programming design and implementation. This is a platform where the students can construct their own flowcharts, test and use them as they would like. \newline
+		
+		Furthermore, this system is highly related to the already existing edition of JavaBlock. The idea behind this system and that of JavaBlock is the same, they both pursue the same purpose. However, they are different when it comes to the usability of the system. With Flow (this system) focusing more on the interaction the user has on the system. For example, with JavaBlock to place a block onto the canvas one requires a couple of operations but with Flow, drag-and-drop operation is used.\newline
+		
+		Most importantly, this system is solely designed for the benefits of first-year students. However, it can also be extended for other relevant uses. For all other users, the purpose is still the same as other flowchart interpreters.
 		
 \section{System Configuration}
 		
+		This is desktop application, it is intended to operate on any Linux distribution. However, it can also be used on Windows platform. It is not a very sophisticated software and since the system is a minimal stand-alone application, not so many configurations required. \newline
 		
-		The flowchart tool is intended to operate on any Linux distribution. However, it can also be used on Windows and Mac OS. It is not a very sophisticated software and since the system is a minimal stand-alone application, not so many configurations required. 
-		
-		It is so far recommended that the computer in which the system will be executed have Java 7 and above installed to allow the successful execution of the program. Other versions might make the system have unseen bugs.
-		
-		Also, on Windows...
+		It is so far recommended that the computer in which the system will be executed on have Java 7 and above installed to allow the successful execution of the program. Older versions may cause the system to break, and not execute as expected. The system was not tested on Windows XP and the versions released before that, it is then recommended that the desktops should be running Windows 7 and above.\newline		
 		
 \section{System Installation}
 		
 		This system requires a complete installation in order to fully operate it. For different platforms, various installation files are required. \newline
 		
 
-		\subsection{Windows}
+		\subsection{Windows installation}
 		
 		The image below shows the file that one requires for a complete successful installation of the program. Double-click the file to begin the installation process. \newline \newline
 		\includegraphics[width=13cm, height=2cm]{Install1.jpg}		
