--- a/Revised JB version/src/config/lang/lang.properties
+++ b/Revised JB version/src/config/lang/lang.properties
@@ -122,12 +122,12 @@ ioEditor.drawStandard=Draw standard shape
 ioEditor.drawMessage=Draw message
 popup.newVersion=New version of JavaBlock is available\nDo you want to visit http://javablock.sf.net/ ?
 popup.flowchartNewer=Document which you like to open is created in newer version of JavaBlock
-popup.flowMustBeUnique=Flowchart name must be unique and contains no special chars nor whitespaces
-popup.flowMustNotBeEmpty=Flowchart must have a name i.e It cant be blank.
+popup.flowMustBeUnique=Flowchart name must be unique and contain no special chars nor whitespaces
+popup.flowMustNotBeEmpty=Flowchart must have a name.
 popup.flowMustBeUnique.head=Wrong name
 popup.loadLastError=Unable to load last flowchart
 popup.loadError.head=Error loading
-popup.overwrite=File exist. Overwrite it?
+popup.overwrite=File already exists. Overwrite it?
 popup.saveError=Error saving
 popup.pythonApplet=Python is not supported in applet.\nUse JavaScript, or run JavaBlock from HDD
 popup.pythonNotFound=Python not found\nDo you want to install it?
