--- a/Documentation/User Manual/coverpage.tex
+++ b/Documentation/User Manual/coverpage.tex
@@ -3,7 +3,7 @@
 		
 		\begin{figure}[t]
 			\centering
-			\includegraphics[width=350px]{UP_Logo.png}
+			\includegraphics[width=350px, height=7cm]{images/thinkTechLogo.jpg}
 		\end{figure}	
 	
 	\begin{flushright} 
@@ -13,7 +13,7 @@
 		\textbf{\LARGE Flowchart Simulation Tool User Manual}
 		\newline \newline \newline
  		\textbf{\LARGE ThinkTech}
-		\newline \newline \newline
+		\newline \newline
 	\end{flushright}
 	
 	\begin{flushright} \large
