--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -25,34 +25,43 @@
 		
 		This is desktop application, it is intended to operate on any Linux distribution. However, it can also be used on Windows platform. It is not a very sophisticated software and since the system is a minimal stand-alone application, not so many configurations required. \newline
 		
-		It is so far recommended that the computer in which the system will be executed on have Java 7 and above installed to allow the successful execution of the program. Older versions may cause the system to break, and not execute as expected. The system was not tested on Windows XP and the versions released before that, it is then recommended that the desktops should be running Windows 7 and above.\newline		
+		It is so far recommended that the computer in which the system will be executed on have Java 7 and above installed to allow the successful execution of the program. The system was not tested on Windows XP and the versions released before that, it is then recommended that the desktops should be running Windows 7 and above.\newline		
 		
 \section{System Installation}
 		
-		This system requires a complete installation in order to fully operate it. For different platforms, various installation files are required. \newline
+		This system requires a complete installation in order to fully operate it. For different platforms, various installation files are required. \newline \newline
+		
+		The software can be found...
+		
+		% Create a website (or from sourceforge) 
+		
+		
+		%---- link ----
+		
+		% Link and screenshots of the entire process until the user has the icon on the desktop
 		
 
 		\subsection{Windows installation}
 		
-		The image below shows the file that one requires for a complete successful installation of the program. Double-click the file to begin the installation process. \newline \newline
-		\includegraphics[width=13cm, height=2cm]{Install1.jpg}		
+		The image below shows the file that one requires for a complete successful installation of the program. Double-click the file to begin the installation process. \newline \newline \newline
+		\includegraphics[width=13cm, height=2cm]{images/Install1.jpg}		
 		\begin{center}
-		Figure: The file used to install 'Flow'
+		Figure: The file used to install Flow \newline
 		\end{center}
-		
 			
-		Next, follow the installation prompts and complete the installation. \newline
+		Next, follow the installation prompts and complete the installation. After a successful installation the application will be added to computer programs and it is accessible from the start menu. \\ \\
 		
-		\includegraphics[width=13cm]{Install2.jpg}		
+		\includegraphics[width=13cm]{images/Install2.jpg}		
 		\begin{center}
-		Figure: Complete installation
+		Figure: Follow installation instructions
 		\end{center}
 
 \section{Getting Started}
 	
-	For one to get to use the system, that particular user must be registered at the University of Pretoria, and have access to the Linux platform which is granted by the Department of Computer Science. From Linux, the user must be able to access the application, without any further installation or signing-up required.
-
-
+	% For one to get to use the system, that particular user must be registered at the University of Pretoria, and have access to the Linux platform which is granted by the Department of Computer Science. From Linux, the user must be able to access the application, without any further installation or signing-up required.
+	
+	The sole purpose of this software was for first year students registered with the University of Pretoria to use as a flowchart simulator tool. However, it is also available for everyone else who wishes to use it for various purposes. Instruction on how to access the necessary files to install the software are provided above.\\
+	\\For University of Pretoria students, the system will be installed in the Informatorium labs, they will be able to use it from the computers available in the Informatorium. Access to the computers in the Informatorium is restricted to specific students, these students are ones to have access to the system.\\
 
 % This section forms the bulk of the user manual.
 
@@ -62,23 +71,26 @@
 	
 	% Screenshots of how the file should be exucuted	
 	
-		The application will not require any installation. To run the application the user will only require the executable file which will be provided via the on-line University of Pretoria (Computer Science) website. With the executable file the user will only need to double click on the file, then the system will star-up.
+		% The application will not require any installation. To run the application the user will only require the executable file which will be provided via the on-line University of Pretoria (Computer Science) website. With the executable file the user will only need to double click on the file, then the system will star-up.
 		
-		For the time being an executable .jar file has been created to allow instant execution of the system without any installation. Below its a simple outline which illustrate this, an executable is clicked on the top right of the screen and Flow appears instantly. \newline \newline
+	%	For the time being an executable .jar file has been created to allow instant execution of the system without any installation. Below its a simple outline which illustrate this, an executable is clicked on the top right of the screen and Flow appears instantly. \newline \newline
+	
+	
+		After a successful installation of Flow, the potential user can then start the application normally on their machine. The image below depicts the desktop short-cut icon created after the installation is complete.	\\
 		
-		\includegraphics[width=12cm]{RunningFlow.jpg}
-			\begin{center}
-		Figure: Starting the entire system.\newline
+		\includegraphics[width=14cm]{images/DesktopIcon.jpg}
+		\begin{center}
+			Figure: Flow desktop icon.\\
 		\end{center} 
 		
 		
-		
+		Double-clicking the icon on the desktop will consequently open the application. More about the application is discussed below.
 		
 		
 		\subsection{Software Layout}
-		The layout is composed of the canvas, flowchart tools and menu options. \newline 
-		The figure below depicts the general layout of the entire system. \newline \newline
-		\includegraphics[width=\textwidth]{SystemLayout.jpg}
+		The layout is composed of the canvas, flowchart tools and menu options. The figure below depicts the general layout of the entire system.
+		
+		\includegraphics[width=\textwidth]{images/SystemLayout.jpg}
 		\begin{center}
 		Figure: The General System Layout.\newline
 		\end{center}
@@ -87,7 +99,7 @@
 		\begin{itemize}
 			\item \textbf{Canvas:} This space is provided to design a 			well-formed flowchart. Components will be dragged from the flowchart 				tools menu consisting of available components and dropped onto the 				canvas. See figure below.\newline
 			There are components which are already implemented at start of the system, the 'start' and 'end' blocks are initialised by default on the canvas.\newline \newline
-			\includegraphics[width=11.5cm]{Canvas.jpg}
+			\includegraphics[width=11.5cm]{images/Canvas.jpg}
 			\begin{center}
 		Figure: The Canvas.\newline
 		\end{center}
@@ -96,7 +108,7 @@
 			
 		The tools are draggable, i.e, from the toolbar hover over the block you want to use and drag it over to the canvas (the white plane on the left - as illustrated above). Under "using the system" is a detailed illustration on how to use these tools. \newline \newline			
 			
-			\includegraphics[width=11.5cm]{Tools.jpg}
+			\includegraphics[width=11.5cm]{images/Tools.jpg}
 			\begin{center}
 		Figure: Flowchart Tool Components.\newline
 		\end{center} 
@@ -112,7 +124,7 @@
 \end{itemize}				
 			
 			
-			\includegraphics[width=11.5cm]{Menu.jpg}
+			\includegraphics[width=11.5cm]{images/Menu.jpg}
 			\begin{center}
 		Figure: Menu Bar.
 		\end{center}
@@ -160,6 +172,8 @@ However, the user can create new project from the menu bar. To create a new proj
 	To open an existing project go to the menu bar and select the "File" option and then select the "Open" menu item. Search for an existing flowchart project with the valid extention. The flowchart project will now be loaded onto the canvas and should be able to be updated.
 	
 \section{Troubleshooting}
+
+Recall from "System Configuration" the Java version compatible with this system. Older versions of Java may cause the system to break, and not execute as expected. Hence, violating the reliability of the entire system.
 
 This system is not connected to any other external systems, this reduces the amount of errors that might usually breakdown the system.
 
